--- a/Credit_Card_Default_Classification_Sahil_Kolambkar.ipynb
+++ b/Credit_Card_Default_Classification_Sahil_Kolambkar.ipynb
@@ -4237,6 +4237,7 @@
         "3. *Random Forest Classifier* has the best value of recall score of *83%* \n",
         "4. *Random Forest Classifier* has the best value of f1 score of *84%* \n",
         "5. *Random Forest Classifier* has the best value of Roc_auc score of *84%* \n",
+        "6. *Random Forest Classifier* gave the highest importance to Dues then to payment value and then to limit balance columns accordingly\n",
         "6. *Random Forest Classifier* had average fitting time of 1.67 according to cross validate method of sklearn\n",
         "This proves *Random Forest Classifier algorithm* has perfectly fitted all the dataset."
       ]
