--- a/Credit_Card_Default_Classification_Sahil_Kolambkar.ipynb
+++ b/Credit_Card_Default_Classification_Sahil_Kolambkar.ipynb
@@ -21,6 +21,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# <b><u> GITHUB Link :</u></b> https://github.com/Data-Scientist400701/Credit_card_default_Classification"
+      ],
+      "metadata": {
+        "id": "AGjbfhvfhDAv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<b><u> Google Drive Link : https://drive.google.com/drive/folders/1ae4joIOxOq9GpCcsgqaxVI_sxf9R9t-5?usp=sharing  </u></b>"
+      ],
+      "metadata": {
+        "id": "iEcIhb-XhVjT"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "DNrZmFgMKk-P"
       },
@@ -53,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "n1vihMLL81vp"
       },
@@ -89,13 +107,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-YwhQ4A187iI",
-        "outputId": "b9c953d6-4ac4-4fa7-dca7-ba57648f5491"
+        "outputId": "394baeb5-919a-47ba-a93e-ad2534221734"
       },
       "outputs": [
         {
@@ -114,13 +132,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "15pxY1N45t4C",
-        "outputId": "dac7f04d-2922-4da4-e177-ea5f2018283e"
+        "outputId": "de0ebdcc-2e61-4f18-85fd-8fb9f2366a80"
       },
       "outputs": [
         {
@@ -131,7 +149,7 @@
             "Requirement already satisfied: xlrd in /usr/local/lib/python3.8/dist-packages (1.1.0)\n",
             "Collecting xlrd\n",
             "  Downloading xlrd-2.0.1-py2.py3-none-any.whl (96 kB)\n",
-            "\u001b[K     |████████████████████████████████| 96 kB 2.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 96 kB 2.8 MB/s \n",
             "\u001b[?25hInstalling collected packages: xlrd\n",
             "  Attempting uninstall: xlrd\n",
             "    Found existing installation: xlrd 1.1.0\n",
@@ -147,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "po2Ca-nV87k2"
       },
@@ -159,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "DqF159KbGQew"
       },
@@ -171,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -495,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -527,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -591,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -615,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "-55AkMOtxDAq"
       },
@@ -626,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1103,7 +1121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "QHhB_G0D87vv"
       },
@@ -1115,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "2OJlkxepABKD"
       },
@@ -1128,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "AhA-9aD4ABRB"
       },
@@ -1141,7 +1159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "4OZmEqWyG0Vy"
       },
@@ -1155,7 +1173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "ug4PUZ1ARbkE"
       },
@@ -1187,7 +1205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1214,7 +1232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1246,7 +1264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "scrolled": true,
         "colab": {
@@ -1292,7 +1310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "KRyMEdq_xDAs"
       },
@@ -1305,7 +1323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "qYJnX9gPxDAs"
       },
@@ -1326,7 +1344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1365,7 +1383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1411,7 +1429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1440,7 +1458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1473,7 +1491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1553,7 +1571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1602,7 +1620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1651,7 +1669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1757,7 +1775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
