--- a/Credit_Card_Default_Classification_Sahil_Kolambkar.ipynb
+++ b/Credit_Card_Default_Classification_Sahil_Kolambkar.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "n1vihMLL81vp"
       },
@@ -107,13 +107,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-YwhQ4A187iI",
-        "outputId": "394baeb5-919a-47ba-a93e-ad2534221734"
+        "outputId": "5b06d8e2-f78d-47de-d16a-f723382e3aa7"
       },
       "outputs": [
         {
@@ -132,13 +132,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "15pxY1N45t4C",
-        "outputId": "de0ebdcc-2e61-4f18-85fd-8fb9f2366a80"
+        "outputId": "4f117781-1169-46bf-994d-e48dbdfd7edd"
       },
       "outputs": [
         {
@@ -146,15 +146,15 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: xlrd in /usr/local/lib/python3.8/dist-packages (1.1.0)\n",
+            "Requirement already satisfied: xlrd in /usr/local/lib/python3.8/dist-packages (1.2.0)\n",
             "Collecting xlrd\n",
             "  Downloading xlrd-2.0.1-py2.py3-none-any.whl (96 kB)\n",
-            "\u001b[K     |████████████████████████████████| 96 kB 2.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 96 kB 3.5 MB/s \n",
             "\u001b[?25hInstalling collected packages: xlrd\n",
             "  Attempting uninstall: xlrd\n",
-            "    Found existing installation: xlrd 1.1.0\n",
-            "    Uninstalling xlrd-1.1.0:\n",
-            "      Successfully uninstalled xlrd-1.1.0\n",
+            "    Found existing installation: xlrd 1.2.0\n",
+            "    Uninstalling xlrd-1.2.0:\n",
+            "      Successfully uninstalled xlrd-1.2.0\n",
             "Successfully installed xlrd-2.0.1\n"
           ]
         }
@@ -165,19 +165,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "po2Ca-nV87k2"
       },
       "outputs": [],
       "source": [
         "# Reading the dataset\n",
-        "df = pd.read_excel('/content/drive/MyDrive/Classification Capstone/default of credit card clients.xls',header =1)"
+        "df = pd.read_excel('/content/drive/MyDrive/Credit card default classification capstone/default of credit card clients.xls',header =1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "DqF159KbGQew"
       },
@@ -189,14 +189,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 322
         },
         "id": "3ONtZa1S87n9",
-        "outputId": "0be97481-fcd4-4f55-c9a5-0f5c94f757d8"
+        "outputId": "663175f8-1238-4332-f11a-428f0a9121a4"
       },
       "outputs": [
         {
@@ -233,7 +233,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a6d80aa6-ce4b-4dd9-9b36-0ba9e3f434c2\">\n",
+              "  <div id=\"df-698811af-7deb-4c5b-b006-34a642ee22d3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -424,7 +424,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a6d80aa6-ce4b-4dd9-9b36-0ba9e3f434c2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-698811af-7deb-4c5b-b006-34a642ee22d3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -475,12 +475,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a6d80aa6-ce4b-4dd9-9b36-0ba9e3f434c2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-698811af-7deb-4c5b-b006-34a642ee22d3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a6d80aa6-ce4b-4dd9-9b36-0ba9e3f434c2');\n",
+              "          const element = document.querySelector('#df-698811af-7deb-4c5b-b006-34a642ee22d3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -4273,6 +4273,27 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "qD51XwxM-00_",
+        "DMaqNVH8xDAr",
+        "HKh5Y6fGK-1U",
+        "rBmvj3b_Sj0e",
+        "KkYQSmjCSsAN",
+        "S4cq5AGSZSRz",
+        "yB-TmaQ2T4el",
+        "FI2ha-9yTffD",
+        "gdQGdGO1bItc",
+        "X_x5T1IVcaPn",
+        "GmS6-qh4daJR",
+        "5k-kgHmoHw7N",
+        "DkfhAtEDIcOC",
+        "QhnQQR_aY42r",
+        "EV9VAsvCZdVt",
+        "0WzhHbewZdVx",
+        "NM1FlNRPZdVx",
+        "a8VM3Lm0ZdVy",
+        "oUFeS6LBOFLM"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
